[gd_scene load_steps=10 format=2]

[ext_resource path="res://SuperpositionKey/SuperpositionKeySprite.png" type="Texture" id=1]
[ext_resource path="res://SuperpositionKey/SuperpositionKey.gd" type="Script" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dialog-System-Example/Dialog_Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://VibratingTile/VibratingTileHitbox.gd" type="Script" id=6]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 40 )

[node name="SuperpositonKey" type="Node2D" groups=[
"OtterNode",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
position = Vector2( -1, -2 )
collision_layer = 8
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Hurtbox2" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -33.7029 )
collision_layer = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox2"]
position = Vector2( 0, 33.7029 )
shape = SubResource( 2 )

[node name="Dialog_Player" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="area_entered" from="Hurtbox2" to="." method="_on_Hurtbox2_area_entered"]
[connection signal="area_exited" from="Hurtbox2" to="." method="_on_Hurtbox2_area_exited"]

[editable path="Hitbox"]
